deployments/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-web
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: ongf/team02-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        securityContext:          
          allowPrivilegeEscalation: false  
          runAsNonRoot: true
          runAsUser: 1000                
          capabilities:
            drop: ["ALL"]                   
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: "200m"         
            memory: "256Mi"
          requests:
            cpu: "100m"         
            memory: "128Mi"
        volumeMounts:  
        - name: db-persistent-storage
          mountPath: /app/database            
      volumes:
      - name: db-persistent-storage
        hostPath:
          path: /home/user/kang-inho/db-data
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: fastapi-web
  namespace: web
spec:
  type: NodePort  
  selector:
    app: fastapi
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 30080
